# svelte-template

./: .env  .flaskenv  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  README.md  build.main.mjs  build.mjs  index.html  package.json  postcss.config.js  pyproject.toml  tox.ini  tsconfig.json
app/: __main__.py  app.py  cdn.toml  config.py  flask_utils.py  index_view.py  logger.py  utils.py  wsgi.py
app/blueprints/commands/: README.md  __main__.py  cmd.py  view.py
app/blueprints/delay/: view.py
app/blueprints/dropzone/: view.py
app/blueprints/forms/: view.py
app/blueprints/nunjucks/: view.py
app/blueprints/plots/: view.py
app/commands/: README.md  __main__.py  cmd.py  view.py
app/commands/src/: Command.svelte  build.cmd.mjs  cmd.js
app/commands/templates/: command.html
app/static/css/: global.css
app/templates/: base.html  index.html  raw.css  raw.html
app/templates/errors/: 404.html
app/templates/fragments/: debug_reloader.js  google.html  macros.html  meta.html  theme.html
app/templates/nunjucks/: fragment.html  main.html
public/: index.html
src/: App.svelte  Counter.svelte  DualRange.svelte  app.css  main.js  shared.svelte.ts
src/lib/: Counter.svelte  EnsureLib.svelte  Require.svelte  delegates.ts  toastr.ts
src/lib/bootstrap/: Dialog.svelte  Progress.svelte  Select.svelte  select.d.ts
src/lib/nunjucks/: Nunjucks.svelte  (+2 more)
svelte-build/: build.main.mjs  build.mjs  buildapp.mjs  libdir-plugin.mjs  nunjucks-plugin.mjs  nunjucks.main.mjs  svelte-module.mjs
svelte-build/vite/: viteNunjucksPlugin.js
(+50 files in other folders)
