[tool.poetry]
name = "template"
version = "0.1.1"
description = "Templates for starting a new flask website"
authors = ["Ian Castleden <ian.castleden@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "^2.1.3"
python-dotenv = "^0.20.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
