[tool.poetry]
name = "svelte-template"
version = "0.1.3"
description = "Templates for starting a new flask website"
authors = ["Ian Castleden <ian.castleden@uwa.edu.au>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
Flask = "^3.0.0"
tomli = "^2.0.1"
python-dotenv = "^1.0.0"
# importlib-metadata = "^4.12.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.5.1"
pre-commit = ">=3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
